# pylint-clean-architecture

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ONBOARDING.md  BRANDING.md  CHANGELOG.md  Makefile  README.md  RULES.md  WORKFLOW_SETUP.md  check_annotated_v.py  check_param_inference_v2.py  check_param_inference_v3.py  debug_astroid.py  debug_call_inference.py  debug_lod_violations.py  debug_output.txt  debug_primitive_trust.py  debug_protocol.py  debug_protocol_2.py  debug_test_rule.py  fix_contract_integrity.py  pyproject.toml  repro.py  reproduce_typeshed.py
.agent/: cli_refactor_plan.md  cli_violations_diagnosis.md  final_refactor_prompt.md  instructions.md  mission1_summary.md  mission3_summary.md  mission4_summary.md  pre-flight.md  remediation_instructions.md  remediation_prompt.md
.cursor/rules/: excelsior-generation.md
.excelsior/: fix_manifest.md  last_audit.json  last_audit.txt
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURAL_ENTROPY.md  COMMANDS.md  CONTRACT_INTEGRITY_IMPLEMENTATION_STATUS.md  CONTRACT_INTEGRITY_QUICK_REF.md  CONTRACT_INTEGRITY_SPEC.md  EXCELSIOR_PASSES_AND_GATES.md  GENERATION_GUIDANCE.md  QUICKSTART.md  RULE_CONSOLIDATION_PROPOSAL.md  RULE_CONSOLIDATION_STATUS.md  SAE_IMPLEMENTATION_PLAN.md  SAE_PLAN_ADDENDUM.md  STATE_AND_RULES_DESIGN.md  UX_OVERHAUL_ADDENDUM.md  excelsior_prompts.yaml
resources/: strategy_tree.yaml
resources/data/: excelsior_violations.csv
scripts/: analyze_filesystem_coverage.py
src/clean_architecture_linter/: __init__.py  __main__.py  checker.py  cli.py  config.py  config.py.bak  constants.py  fixer.py  helpers.py  layer_registry.py  reporter.py  reporter.py.bak  ui.py
src/clean_architecture_linter/checks/: boundaries.py  bypass.py  contracts.py  contracts.py.bak  coupling.py  dependencies.py  design.py  design.py.bak  di.py  immutability.py  patterns.py  resources.py  snowflake.py  structure.py  testing.py  visibility.py
src/clean_architecture_linter/di/: container.py
src/clean_architecture_linter/domain/: config.py  constants.py  entities.py  layer_registry.py  protocols.py  registry_types.py  rule_msgs.py  rules.py  rules.py.bak  transformation_contexts.py
src/clean_architecture_linter/infrastructure/: checker.py  config_file_loader.py  pyi_annotation.py  reporters.py  rule_msgs.py  typeshed_integration.py
src/clean_architecture_linter/interface/: checker.py  cli.py  reporter.py  reporters.py  telemetry.py  telemetry.py.bak
src/clean_architecture_linter/stubs/: nonexistent_module_xyz.pyi  test_stub_module.pyi
src/clean_architecture_linter/use_cases/: __init__.py  apply_fixes.py  apply_fixes.py.bak  check_audit.py  init_project.py  plan_fix.py
src/clean_architecture_linter_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/excelsior_architect/: __init__.py  __main__.py
src/excelsior_architect/domain/: analysis.py  config.py  constants.py  entities.py  layer_registry.py  patterns.py  protocols.py  registry_types.py  rule_msgs.py  sae_entities.py
src/excelsior_architect/infrastructure/: bootstrapper.py  checker.py  pyi_annotation.py  reporters.py  rule_msgs.py  typeshed_integration.py
src/excelsior_architect/interface/: cli.py  reporter.py  reporters.py
src/excelsior_architect/resources/: __init__.py
src/excelsior_architect/stubs/: nonexistent_module_xyz.pyi  test_stub_module.pyi
src/excelsior_architect/use_cases/: analyze_health.py  apply_fixes.py  check_audit.py  generate_blueprint.py  iniitialize_graph.py  init_project.py  initialize_graph.py  plan_fix.py
stubs/astroid/: __init__.pyi  nodes.pyi
stubs/snowflake/: connector.pyi
tests/: conftest.py  conftest.py.bak  linter_test_utils.py  linter_test_utils.py.bak  test_checkers.py  test_convention_logic.py  test_convention_logic.py.bak  test_dependencies.py  test_plugin_integrity.py  test_plugin_integrity.py.bak  test_plugin_logic.py  test_reporter.py  verify_plugin.py
tests/architecture/: test_bad_examples.py
tests/bait/: clean_file.py  violation_bypass_banned.py  violation_bypass_banned.py.bak  violation_bypass_lazy.py.bak  violation_bypass_unlisted.py
tests/bait/domain/: protocols.py  violation_immutability.py
tests/bait/infrastructure/: violation_contract.py  violation_contract.py.bak
tests/benchmarks/: lod-samples.py  lod-samples.py.bak  lod_samples.py
tests/benchmarks/lod/: samples.py  samples.py.bak
tests/functional/: test_bad_examples.py  test_bad_examples.py.bak  test_cli_violations_diagnosis.py  test_exhaustive_lod.py  test_fix_command_isolated.py  test_lod_benchmarks.py  test_lod_benchmarks.py.bak  test_lod_dict_primitives.py  test_lod_dict_primitives.py.bak  test_multi_pass_lod_resolution.py  test_multi_pass_lod_resolution.py.bak  test_primitive_strangers.py  test_primitive_strangers.py.bak  test_raw_logs_after_audit.py  test_sae_init_check_blueprint.py  test_snowflake_w9019_smoke.py  test_stub_resolution.py
tests/functional/cases/: case_w9015_type_hints.py.bak
tests/functional/source-data/: lod-astroid-api.py  lod-domain-entities.py  lod-factories.py  lod-fluent-apis.py  lod-fluent-apis.py.bak  lod-mocking.py  lod-primitives.py  lod-protocol-hints.py  lod-standard-library.py  lod-standard-library.py.bak  lod-violations-logic.py  snowflake_stable.py  snowflake_unstable.py
tests/functional/source_data/: comprehensive_benchmark.py  lod_benchmark.py  lod_benchmark.py.bak  type_hint_gap.py  type_hint_gap.py.bak
tests/integration/: test_typeshed_resolution.py
tests/temp/: pyproject.toml
tests/unit/: checker_test_utils.py  checker_test_utils.py.bak  test_check_command.py  test_cli.py  test_config.py  test_config.py.bak  test_config_validation.py  test_config_validation.py.bak  test_container.py  test_container.py.bak  test_fixer.py  test_generic_config.py  test_layer_registry.py  test_reporter.py  test_ruff_config_simple.py  test_signature_intelligence.py  test_structure_checker.py  test_stub_purge.py
tests/unit/checks/: test_boundaries.py  test_bypass.py  test_contracts_exhaustive.py  test_contracts_exhaustive.py.bak  test_dependencies.py  test_design.py  (+13 more)
(+207 files in other folders)
