[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-clean-architecture"
version = "1.6.0"
description = "Excelsior: High-fidelity AI Governance Framework for Clean Architecture."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pylint>=2.15.0",
    "tomli; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "typeshed-client",
    "stellar-ui-kit @ file:///development/stellar-ui-kit",
    "import-linter",
    "libcst>=1.0.0",
    "typer[all]>=0.12.0",
    "mypy>=1.0.0",
    "astroid>=3.0.0",
    "ruff>=0.3.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
excelsior = "clean_architecture_linter.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-coverage-impact @ file:///development/pytest-coverage-impact",
]

[tool.mypy]
# Stubs for untyped packages (astroid, libcst, snowflake, etc.) live inside the package
# at src/clean_architecture_linter/stubs/ for distribution alongside the main package.
mypy_path = "src/clean_architecture_linter/stubs"
follow_imports = "silent"
ignore_missing_imports = true
# Exclude the stubs directory from being treated as a Python module to avoid
# "Source file found twice under different module names" error
exclude = ["src/clean_architecture_linter/stubs/"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clean_architecture_linter" = ["py.typed", "stubs/**/*.pyi", "infrastructure/resources/*.yaml"]
"*" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
# Run only fast tests by default; use -m slow or make test-slow for slow tests.
addopts = "--cov=src --cov-report=term-missing --cov-report=json --cov-fail-under=85 --coverage-impact -m 'not slow'"
pythonpath = ["src"]
markers = [
    "unit: mark a test as a unit test.",
    "slow: mark a test as slow (subprocess, full CLI, etc.); excluded from default runs.",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
allow_zero_version = true
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90", # mccabe complexity
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long template strings in architecture docs
"src/clean_architecture_linter/constants.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.pylint.main]
load-plugins = ["clean_architecture_linter"]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "clean-arch-delegation",
    "clean-arch-demeter",
    "clean-arch-unstable-dep",
    "clean-arch-visibility",
    "clean-arch-resources",
    "clean-arch-bypass",
    "clean-arch-design",
    "clean-arch-di",
    "clean-arch-god-file",
    "clean-arch-folder-structure",
    "clean-arch-layer-integrity",
    "clean-arch-class-only",
    "clean-arch-contracts",
    "clean-arch-testing",
    "clean-arch-immutability",
    "clean-arch-dependency",
    "illegal-io-operation",
    "duplicate-code",
]

[tool.clean-arch]
silent_layers = ["Domain", "UseCase"]
allowed_io_interfaces = ["TelemetryPort", "UserInterfaceProtocol"]
# allowed_lod_modules removed in v3 (Dynamic Discovery Active)
# allowed_lod_methods removed in v3 (Dynamic Discovery Active)
project_name = "EXCELSIOR"
color = "red"
welcome_msg = "Command Cruiser Online"
shared_kernel_modules = ["stellar_ui_kit"]
audit_exclude_paths = ["tests/bait"]

[tool.clean-arch.layer_map]
"clean_architecture_linter.domain" = "Domain"
"clean_architecture_linter.use_cases" = "UseCase"
"clean_architecture_linter.interface" = "Interface"
"clean_architecture_linter.infrastructure" = "Infrastructure"
"clean_architecture_linter.__main__" = "Infrastructure"
# Note: clean_architecture_linter.stubs is excluded from mypy (contains .pyi stubs, not Python code)

[tool.coverage.run]
source = ["clean_architecture_linter"]
omit = [
    "**/tests/**",
]

[tool.pylint.MASTER]
load-plugins = [
    "clean_architecture_linter"
]

[tool.pylint.REPORTS]
# This makes Pylint use our table reporter by default
output-format = "colorized,clean-arch-summary"

[tool.importlinter]
root_package = "clean_architecture_linter"

[[tool.importlinter.contracts]]
name = "Clean Architecture Layers"
type = "layers"
layers = [
    "clean_architecture_linter.infrastructure",  # Outermost - can import everything
    "clean_architecture_linter.interface",       # Can import UseCase/Domain
    "clean_architecture_linter.use_cases",       # Can import Domain
    "clean_architecture_linter.domain",          # Innermost - imports NOTHING
]
