[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excelsior-architect"
version = "1.6.0"
description = "Excelsior: High-fidelity AI Governance Framework for Clean Architecture."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pylint>=2.15.0",
    "tomli; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "typeshed-client",
    "stellar-ui-kit @ file:///development/stellar-ui-kit",
    "import-linter",
    "libcst>=1.0.0",
    "typer[all]>=0.12.0",
    "mypy>=1.0.0",
    "astroid>=3.0.0",
    "ruff>=0.3.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
excelsior = "excelsior_architect.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-coverage-impact @ file:///development/pytest-coverage-impact",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
    "streamlit>=1.0.0",
]

[tool.mypy]
# Stubs for untyped packages (astroid, libcst, snowflake, etc.) live inside the package
# at src/excelsior_architect/stubs/ for distribution alongside the main package.
mypy_path = "src/excelsior_architect/stubs"
follow_imports = "silent"
ignore_missing_imports = true
# Exclude the stubs directory from being treated as a Python module to avoid
# "Source file found twice under different module names" error
exclude = ["src/excelsior_architect/stubs/"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"excelsior_architect" = ["py.typed", "stubs/**/*.pyi", "infrastructure/resources/*.yaml"]
"*" = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
# Run only fast tests by default; use -m slow or make test-slow for slow tests.
addopts = "--cov=src --cov-report=term-missing --cov-report=json --cov-fail-under=80 --coverage-impact -m 'not slow'"
pythonpath = ["src"]
markers = [
    "unit: mark a test as a unit test.",
    "slow: mark a test as slow (subprocess, full CLI, etc.); excluded from default runs.",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = true
upload_to_release = true
allow_zero_version = true
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C90", # mccabe complexity
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long template strings in architecture docs
"src/excelsior_architect/constants.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.pylint.main]
load-plugins = ["excelsior_architect"]

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "clean-arch-delegation",
    "clean-arch-demeter",
    "clean-arch-unstable-dep",
    "clean-arch-visibility",
    "clean-arch-resources",
    "clean-arch-bypass",
    "clean-arch-design",
    "clean-arch-di",
    "clean-arch-god-file",
    "clean-arch-folder-structure",
    "clean-arch-layer-integrity",
    "clean-arch-class-only",
    "clean-arch-contracts",
    "clean-arch-testing",
    "clean-arch-immutability",
    "clean-arch-dependency",
    "illegal-io-operation",
    "duplicate-code",
]

[tool.clean-arch]
silent_layers = ["Domain", "UseCase"]
allowed_io_interfaces = ["TelemetryPort", "UserInterfaceProtocol"]
# allowed_lod_modules removed in v3 (Dynamic Discovery Active)
# allowed_lod_methods removed in v3 (Dynamic Discovery Active)
project_name = "EXCELSIOR"
color = "red"
welcome_msg = "Command Cruiser Online"
shared_kernel_modules = ["stellar_ui_kit"]
audit_exclude_paths = ["tests/bait", "src/excelsior_architect/stubs"]

[tool.clean-arch.contract_integrity]
# ️USER APPROVAL REQUIRED FOR ANY ADDITIONS ️
# See docs/CONTRACT_INTEGRITY_SPEC.md for full specification.
# Auto-detected: TypedDict, CSTTransformer, _ prefix, @internal
internal_implementation = [
    "ExcelsiorContainer",  # DI container itself (composition root, not a dependency)
]

[tool.clean-arch.layer_map]
"excelsior_architect.domain" = "Domain"
"excelsior_architect.use_cases" = "UseCase"
"excelsior_architect.interface" = "Interface"
"excelsior_architect.infrastructure" = "Infrastructure"
"excelsior_architect.__main__" = "Infrastructure"
# Note: excelsior_architect.stubs is excluded via audit_exclude_paths (contains .pyi stubs, not Python code)

[tool.coverage.run]
source = ["excelsior_architect"]
omit = [
    "**/tests/**",
]

[tool.pylint.MASTER]
load-plugins = [
    "excelsior_architect"
]

[tool.pylint.REPORTS]
# This makes Pylint use our table reporter by default
output-format = "colorized,clean-arch-summary"

[tool.importlinter]
root_package = "excelsior_architect"

[[tool.importlinter.contracts]]
name = "Clean Architecture Layers"
type = "layers"
layers = [
    "excelsior_architect.infrastructure",  # Outermost - can import everything
    "excelsior_architect.interface",       # Can import UseCase/Domain
    "excelsior_architect.use_cases",       # Can import Domain
    "excelsior_architect.domain",          # Innermost - imports NOTHING
]
