[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "excelsior-architect"
version = "1.6.0"
description = "Excelsior: High-fidelity AI Governance Framework for Clean Architecture."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Antigravity Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pylint>=2.15.0",
    "tomli; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "typeshed-client",
    "stellar-ui-kit @ file:///development/stellar-ui-kit",
    "import-linter",
    "libcst>=1.0.0",
    "typer[all]>=0.12.0",
    "mypy>=1.0.0",
    "astroid>=3.0.0",
    "ruff>=0.3.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0.12",
    "kuzu>=0.4.0",
]

[project.license]
text = "MIT"

[project.scripts]
excelsior = "excelsior_architect.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-coverage-impact @ file:///development/pytest-coverage-impact",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
    "streamlit>=1.0.0",
]

[tool.mypy]
mypy_path = "src/excelsior_architect/stubs"
follow_imports = "silent"
ignore_missing_imports = true
exclude = [
    "src/excelsior_architect/stubs/",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
excelsior_architect = [
    "py.typed",
    "stubs/**/*.pyi",
    "infrastructure/resources/*.yaml",
    "resources/data/*.csv",
]
"*" = [
    "assets/*.png",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
addopts = "--cov=src --cov-report=term-missing --cov-report=json --cov-fail-under=80 --coverage-impact -m 'not slow'"
pythonpath = [
    "src",
]
markers = [
    "unit: mark a test as a unit test.",
    "slow: mark a test as slow (subprocess, full CLI, etc.); excluded from default runs.",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
allow_zero_version = true
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C90",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/excelsior_architect/constants.py" = [
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.pylint.main]
load-plugins = [
    "excelsior_architect",
]

[tool.pylint.messages_control]
disable = [
    "all",
]
enable = [
    "clean-arch-delegation",
    "clean-arch-demeter",
    "clean-arch-unstable-dep",
    "clean-arch-visibility",
    "clean-arch-resources",
    "clean-arch-bypass",
    "clean-arch-design",
    "clean-arch-di",
    "clean-arch-god-file",
    "clean-arch-folder-structure",
    "clean-arch-layer-integrity",
    "clean-arch-class-only",
    "clean-arch-contracts",
    "clean-arch-testing",
    "clean-arch-immutability",
    "clean-arch-dependency",
    "illegal-io-operation",
    "duplicate-code",
]

[tool.pylint.MASTER]
load-plugins = [
    "excelsior_architect",
]

[tool.pylint.REPORTS]
output-format = "colorized,clean-arch-summary"

[tool.clean-arch]
silent_layers = [
    "Domain",
    "UseCase",
]
allowed_io_interfaces = [
    "TelemetryPort",
    "UserInterfaceProtocol",
]
project_name = "EXCELSIOR"
color = "red"
welcome_msg = "Command Cruiser Online"
shared_kernel_modules = [
    "stellar_ui_kit",
]
audit_exclude_paths = [
    "tests/bait",
    "src/excelsior_architect/stubs",
]

[tool.clean-arch.contract_integrity]
internal_implementation = [
    "ExcelsiorContainer",
]

[tool.clean-arch.layer_map]
"excelsior_architect.domain" = "Domain"
"excelsior_architect.use_cases" = "UseCase"
"excelsior_architect.interface" = "Interface"
"excelsior_architect.infrastructure" = "Infrastructure"
"excelsior_architect.__main__" = "Infrastructure"

[tool.coverage.run]
source = [
    "excelsior_architect",
]
omit = [
    "**/tests/**",
]

[tool.importlinter]
root_package = "excelsior_architect"

[[tool.importlinter.contracts]]
name = "Clean Architecture Layers"
type = "layers"
layers = [
    "excelsior_architect.infrastructure",
    "excelsior_architect.interface",
    "excelsior_architect.use_cases",
    "excelsior_architect.domain",
]

[tool.excelsior.ruff]
line-length = 120
target-version = "py310"

[tool.excelsior.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "PL",
    "PT",
    "B",
    "A",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = [
    "E501",
    "PLR0913",
]

[tool.excelsior.ruff.lint.mccabe]
max-complexity = 10
